Bug#:	18993, and Bug#:	11520 Modify Validator example to show use of 'required' for checkboxes, radio,select-one, and select-multiple field types.

--- a/src/validator/org/apache/struts/webapp/validator/ApplicationResources.properties
+++ b/src/validator/org/apache/struts/webapp/validator/ApplicationResources.properties
@@ -55,20 +55,26 @@ multiRegistrationForm.title=Multi-page Registration Form
 multiRegistrationForm.description=multi-page example with client side JavaScript validation and server side validation
 
 # Type form
-typeForm.title=Type Form
-typeForm.description=Example validating some primitive numbers, a range on the integer field, a date, and a credit card number.
-typeForm.title.create=Type Form
 typeForm.byte.displayname=Byte Field
-typeForm.short.displayname=Short Field
-typeForm.integer.displayname=Integer Field
-typeForm.long.displayname=Long Field
+typeForm.checkbox.used.languages=Programming Languages used
+typeForm.creditCard.displayname=Credit Card
+typeForm.date.displayname=Date Field
+typeForm.description=Example validating some primitive numbers, a range on the integer field, a date, and a credit card number.
+typeForm.double.displayname=Double Field
 typeForm.float.displayname=Float Field
 typeForm.floatRange.displayname=Float Range Field
-typeForm.double.displayname=Double Field
-typeForm.date.displayname=Date Field
-typeForm.creditCard.displayname=Credit Card
-typeForm.nested=Nested Text
+typeForm.integer.displayname=Integer Field
+typeForm.long.displayname=Long Field
 typeForm.nested.name.displayname=Name
+typeForm.nested=Nested Text
+typeForm.option.os.list=Operating Systems in use
+typeForm.option.satisfaction=Satisfaction
+typeForm.option.select.many=&lt;Select one or more&gt;
+typeForm.option.select.one=&lt;Select One&gt;
+typeForm.radio.overall.satisfaction=Overall Satisfaction
+typeForm.short.displayname=Short Field
+typeForm.title.create=Type Form
+typeForm.title=Type Form
 
 # JavaScript Type Form
 jsTypeForm.title=JavaScript Type Form
