*** empty log message ***

--- a/Eclipse UI/org/eclipse/ui/keys/GestureKey.properties
+++ b/Eclipse UI/org/eclipse/ui/keys/GestureKey.properties
@@ -9,4 +9,7 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 
-KEY_DELIMITER=+
+EAST=East
+NORTH=North
+SOUTH=South
+WEST=West
