--- a/Eclipse UI/org/eclipse/ui/keys/ModifierKey.properties
+++ b/Eclipse UI/org/eclipse/ui/keys/ModifierKey.properties
@@ -9,4 +9,7 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 
-KEY_DELIMITER=+
+ALT=Alt
+COMMAND=Command
+CTRL=Ctrl
+SHIFT=Shift
