--- a/Eclipse UI/org/eclipse/ui/keys/CharacterKey.properties
+++ b/Eclipse UI/org/eclipse/ui/keys/CharacterKey.properties
@@ -9,4 +9,13 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 
-KEY_DELIMITER=+
+BS=Backspace
+CR=Return
+DEL=Del
+ESC=Esc
+FF=FF
+LF=LF
+NUL=Null
+SPACE=Space
+TAB=Tab
+VT=VT
