--- a/Eclipse UI/org/eclipse/ui/keys/SpecialKey.properties
+++ b/Eclipse UI/org/eclipse/ui/keys/SpecialKey.properties
@@ -9,4 +9,24 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 
-KEY_DELIMITER=+
+ARROW_DOWN=Arrow_Down
+ARROW_LEFT=Arrow_Left
+ARROW_RIGHT=Arrow_Right
+ARROW_UP=Arrow_Up
+END=End
+F1=F1
+F10=F10
+F11=F11
+F12=F12
+F2=F2
+F3=F3
+F4=F4
+F5=F5
+F6=F6
+F7=F7
+F8=F8
+F9=F9
+HOME=Home
+INSERT=Insert
+PAGE_DOWN=Page_Down
+PAGE_UP=Page_Up
