*** empty log message ***

--- a/Eclipse UI/org/eclipse/ui/keys/CharacterKey.properties
+++ b/Eclipse UI/org/eclipse/ui/keys/CharacterKey.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 
 BS=Backspace
-CR=Return
+CR=Enter
 DEL=Del
 ESC=Esc
 FF=FF
