--- a/.classpath
+++ b/.classpath
@@ -10,8 +10,9 @@
     <classpathentry kind="src" path="formatter"/>
     <classpathentry kind="src" path="model"/>
     <classpathentry kind="src" path="search"/>
-    <classpathentry kind="src" path="/org.apache.xerces"/>
     <classpathentry kind="src" path="/org.eclipse.core.resources"/>
+    <classpathentry kind="src" path="/org.apache.xerces"/>
+    <classpathentry kind="src" path="/org.eclipse.text"/>
     <classpathentry kind="src" path="/org.eclipse.core.runtime"/>
     <classpathentry kind="src" path="/org.apache.ant"/>
     <classpathentry kind="output" path="bin"/>
