--- a/.project
+++ b/.project
@@ -7,6 +7,7 @@
 		<project>org.apache.xerces</project>
 		<project>org.eclipse.core.resources</project>
 		<project>org.eclipse.core.runtime</project>
+		<project>org.eclipse.text</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
