*** empty log message ***

--- a/Eclipse UI/org/eclipse/ui/internal/commands/KeysPreferencePage.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/commands/KeysPreferencePage.properties
@@ -10,8 +10,8 @@
 ###############################################################################
 
 buttonAdd=Add
-buttonRemove=Remove
-buttonRestore=Restore
+buttonRemove=&Remove
+buttonRestore=R&estore
 commandConflict=[conflict]
 commandNothing=[do nothing]
 commandUndefined=[undefined]
@@ -21,14 +21,14 @@ extendsStandard=(extends Standard)
 general=In General
 groupCommand=Command
 groupKeySequence=Key Sequence
-labelAssignmentsForCommand=Assignments:
-labelAssignmentsForKeySequence=Assignments:
-labelCategory=Category:
-labelCommand=Name:
-labelContext=When:
+labelAssignmentsForCommand=&Assignments:
+labelAssignmentsForKeySequence=A&ssignments:
+labelCategory=Ca&tegory:
+labelCommand=&Name:
+labelContext=&When:
 labelDescription=Description:
-labelKeyConfiguration=Active configuration:
-labelKeySequence=Name:
+labelKeyConfiguration=A&ctive configuration:
+labelKeySequence=Na&me:
 now=(now: {0})
 other=Other
 restoreDefaultsMessageBoxMessage=This will restore all keys to the default settings.\r\nAre you sure you want to do this?
