added some Default Date format patterns into the default properties.

--- a/src/java/org/apache/log4j/chainsaw/prefs/default.properties
+++ b/src/java/org/apache/log4j/chainsaw/prefs/default.properties
@@ -15,3 +15,5 @@ table.columns.widths=50,150,50,100,150,300,150,100,300,150,100,100,100,100
 StatusBar=true
 level.display=icons
 SavedConfigs.Size=0
+DateFormat.1=HH:mm:ss
+DateFormat.2=HH:mm
